--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <!-- <div class="logo">
           <img src="dist/img/seucontador-branco.png">
         </div> -->
-        <div class="titulo col-xs-4 col-xs-offset-4">
+        <div class="titulo col-md-4 col-md-offset-4 col-xs-10 col-xs-offset-1">
           <div>
             <img src="../dist/img/logo.png" class="ola img-responsive" alt="SeuContador • Com você. Em todos os momentos.">
           </div>
