--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
   </head>
   <body data-spy="scroll" data-target="#navbar">
    
-    <div class="container-fluid" id="logo-xs">
+    <!-- <div class="container-fluid" id="logo-xs">
         <img src="../dist/img/logo.png" class="ola" alt="SeuContador • Com você. Em todos os momentos.">
-    </div>
+    </div> -->
     <div class="links-sociais">
       <ul>
         <!-- <li><a href="" target="_blank" id="menu-face"></a></li> -->
@@ -96,7 +96,7 @@
         <!-- <div class="logo">
           <img src="dist/img/seucontador-branco.png">
         </div> -->
-        <div class="titulo col-md-4 col-md-offset-4 col-xs-10 col-xs-offset-1">
+        <div class="titulo col-lg-4 col-lg-offset-4 col-md-8 col-md-offset-2 col-xs-10 col-xs-offset-1">
           <div>
             <img src="../dist/img/logo.png" class="ola img-responsive" alt="SeuContador • Com você. Em todos os momentos.">
           </div>
