--- a/index-final.html
+++ b/index-final.html
@@ -167,7 +167,7 @@
             <img src="../dist/img/carro-img-1.png" class="img-responsive" alt="...">
             <div class="carousel-caption">
                 <h3>Com você. <br><small>Em todos os momentos.</small></h3>
-                <p>SeuContador é o escritório de contabilidade mais próximo do cliente. Não importa o momento em que sua empresa se encontra, nós estamos lá presentes como alguém da sua própria equipe.</p>
+                <p>Não importa o momento em que sua empresa se encontra, <strong>SeuContador</strong> está lá presente como alguém da sua própria equipe enfrentando os desafios com você.</p>
                 <!-- <a href="#" class="btn btn-xs btn-default">Link para o projeto</a> -->
               </div>
             </div>
