--- a/index.html
+++ b/index.html
@@ -104,11 +104,12 @@
               <h2>Com você. Em todos os momentos.</h2>
             </div>
             <div data-depth="5.6">
-              <p class="lead">Estamos fazendo o site do Contador
-                mais próximo do empreendedor, não importa o momento que passa a sua empresa.</p>
+              <p class="lead">
+                Estamos construindo este site para ficar ainda <strong>mais próximo</strong> de você.
+              </p>
             </div>
             <div data-depth="3.2">
-              <p class="lead">Enquanto isso clique abaixo para que entremos em contato com você. : )
+              <p class="lead">Enquanto isso, entre em contato conosco. : )
             </div>
               <button type="submit" class="btn btn-primary btn-block btn-lg" data-toggle="modal" data-target="#modal-orc">Consultoria grátis</button>            
             </div>
