--- a/index.html
+++ b/index.html
@@ -47,11 +47,22 @@
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="dist/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
     <script src="dist/assets/js/ie-emulation-modes-warning.js"></script>
-
     
   </head>
   <body data-spy="scroll" data-target="#navbar">
-   
+    <a href="https://wa.me/5511989569207" target="_blank" style="
+    color: white;
+    background-color: #EA8C2F;
+    padding: 15px 20px;
+    border-radius: 34px;
+    font-weight: 700;
+    font-size: 21px;
+    text-align: center;
+    width: auto;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    z-index: 90000;"><i class="fab fa-whatsapp"></i> 11 98956-9207</a>
     <!-- <div class="container-fluid" id="logo-xs">
         <img src="../dist/img/logo.png" class="ola" alt="SeuContador • Com você. Em todos os momentos.">
     </div> -->
@@ -123,7 +134,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="fas fa-times-circle"></i></button>
-              <h4 class="modal-title" id="myModalLabel">Consultoria grátis • 11 98956-9207 </h4>
+              <h4 class="modal-title" id="myModalLabel">Consultoria grátis • 11 98956-9207 <a href="https://wa.me/5511989569207" target="_blank"><i class="fab fa-whatsapp"></i></a></h4>
             </div>
             <div class="modal-body">
               <div class="col-xs-12">
