--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     /></noscript> -->
     <!-- End Facebook Pixel Code -->
       <!-- WHATS APP WIDGET -->
-      <script async data-id="60142" src="https://cdn.widgetwhats.com/script.min.js"></script>
+      <!-- <script async data-id="60142" src="https://cdn.widgetwhats.com/script.min.js"></script> -->
   </head>
   <body data-spy="scroll" data-target="#navbar">
     <!-- Facebook SDK -->
