--- a/contato/index.html
+++ b/contato/index.html
@@ -73,7 +73,7 @@
           <img src="../dist/img/logo.png" class="ola" alt="Olá! Comunicação e Marketing">
       </div>
       <nav class="navbar navbar-inverse navbar-fixed-top nav-bgInt" id="menuInt"></nav>
-      <div class="btn-whats" style="display: none;"><a href="https://wa.me/5511989569207" target="_blank" class="telefone"><i class="fab fa-whatsapp"></i></a></div>
+      <div class="btn-whats" style="display: none;"><a href="https://wa.me/5511989569207" target="_blank" class=""><i class="fab fa-whatsapp"></i></a></div>
     <!-- HOME -->
     <section class="container-fluid" id="contato-header">
       <div class="container">
