--- a/index.html
+++ b/index.html
@@ -271,22 +271,22 @@
         <div class="seta"><a class="conteudo"><i class="fas fa-chevron-down"></i></a></div>
       </div>
     </section><!-- /.container-fluid -->
-    <!-- <section id="depoimento" class="container-fluid" valign="middle">
+    <section id="depoimento" class="container-fluid" valign="middle">
       <div class="container">
         <div class="col-xs-12 col-sm-9 col-sm-offset-2" id="depoimentos"> 
           <div class="depoimento col-xs-10 col-sm-8 col-sm-offset-1">
-            <h3>Olha o que os clientes falam do SeuContador:</h3>          
+            <h3>Olha o que os nossos clientes falam do SeuContador:</h3>          
           </div>
           <div id="depoimento1">
             <div class="depoimento col-xs-10 col-sm-8 col-sm-offset-1">
-              <div class="col-xs-3">
+              <!-- <div class="col-xs-3">
                 <img src="dist/img/empresario-cidade.png" class="img-responsive img-circle">
-              </div>
-              <div class="col-xs-9">
+              </div> -->
+              <div class="col-xs-12">
                 <p class="">
-                  <span class="fa fa-quote-left"></span> Excellent professionals with outstanding creative and inventive skills. They are very responsible and reliable, and have a deep knowledge of internet marketing tools and design. <span class="fa fa-quote-right"></span>
+                  <span class="fa fa-quote-left"></span> SeuContador é muito mais que uma contabilidade, é uma parceira fundamental da nossa empresa, pois além de cuidar de toda nossa parte fiscal e recursos humanos, nos orienta e direciona com excelência nas áreas tributária e trabalhista,  com toda a certeza nosso crescimento se deve a participação efetiva de todos os profissionais desta equipe, e não poderíamos deixar de manifestar nossa satisfação e gratidão. <span class="fa fa-quote-right"></span>
                 </p>
-                <h4>Marcelo Temporini <br> <small>CEO, MTC</small></h4>
+                <h4>Rubens Longobardi<br> <small>SÓCIO e GERENTE, RWS FIXADORES</small></h4>
               </div>
             </div>
             <div class="col-xs-2 col-sm-3">
@@ -294,15 +294,15 @@
             </div>
             <div id="depoimento2">
             <div class="depoimento col-xs-10 col-sm-8 col-sm-offset-1">
-              <div class="col-xs-3">
+              <!-- <div class="col-xs-3">
                 <img src="dist/img/empresario-cidade.png" class="img-responsive img-circle">
-              </div>
-              <div class="col-xs-9">
+              </div> -->
+              <div class="col-xs-12">
               <p class="">
                 <span class="fa fa-quote-left">                                  </span> 
-                Olá is extremelly important to our company, they are able to supply our various needs with responsability, creativity, dynamism and good ideas. They are flawless with details, pro-active, interested about internal issues and totally reliable. Due to our business size, we demand full attention, exactly how Olá does it, with flexibility plus professionalism. <span class="fa fa-quote-right "></span>
+                Estou com a empresa SeuContador há algum tempo e posso dizer que estou muito satisfeito com os serviços prestados, profissionais muito competentes e com feedback muito rápido. E o que me deixa muito tranquilo é a segurança que eles transmitem através de conhecimentos demonstrados mês a mês... Muito Grato! <span class="fa fa-quote-right "></span>
               </p>
-              <h4>Paulo Macambira <br><small>CEO, Dracma Comercial</small></h4>
+              <h4>Ramon Carvalhaes<br><small>SÓCIO e GERENTE, Odonto Company Cumbica              </small></h4>
               </div>
             </div>
             <div class="col-xs-2 col-sm-3">
@@ -310,21 +310,21 @@
             </div>
             <div id="depoimento3">
             <div class="depoimento col-xs-10 col-sm-8 col-sm-offset-1">
-              <div class="col-xs-3">
+              <!-- <div class="col-xs-3">
                 <img src="dist/img/empresario-cidade.png" class="img-responsive img-circle">
-              </div>
-              <div class="col-xs-9">
+              </div> -->
+              <div class="col-xs-12">
               <p class="">
-                <span class="fa fa-quote-left"></span> Olá is impecable about work details and customer relationship. They are completely aware and acknowledge about their market and that's the kind of company that you can count on everytime, they won't let you down. It is impossible not to indicate their work. <span class="fa fa-quote-right"></span>
+                <span class="fa fa-quote-left"></span> Com a contratação do SeuContador conseguimos colocar as contas contábeis em ordem, começamos a tratar a contabilidade como uma ferramenta de gestão e de planejamento tributário. Outro ponto que destaco é a presteza e a pessoalidade no atendimento, o que consideramos um diferencial!  Sucesso sempre! <span class="fa fa-quote-right"></span>
               </p>
-              <h4>Alexandre Pavanelli <br><small>Partner on Capolleti Attorneys</small></h4>
+              <h4>Francine Rodrigues<br><small>Socia/Gerente, KF Alimentos</small></h4>
               </div>
             </div>   
             <div class="col-xs-2 col-sm-3"><span class="fa fa-chevron-circle-right mostrar1"></span></div>
             </div>  
         </div>
       </div>
-    </section>     -->
+    </section>    
     <!-- CONTEUDO -->
     <section class="container-fluid" id="conteudo" data-stellar-background-ratio="0.5">
       <div class="container">
