--- a/servicos/index.html
+++ b/servicos/index.html
@@ -57,28 +57,28 @@
       <div class="container">
           <div class="col-xs-12">
             <ul>
-              <li>Abertura de empresas</li>
-              <li>Alterações contratuais</li>
-              <li>Cancelamento de Empresas</li>
-              <li>Consultoria tributária</li>
-              <li>Folha de pagamento</li>
-              <li>Escrituração Fiscal e Contábil</li>
-              <li>Assessoria Empresarial</li>
-              <li>Orientação trabalhista</li>
-              <li>Orientação Previdenciária</li>
-              <li>Orientação no Simples Nacional</li>
-              <li>Certidões negativas</li>
-              <li>Estudo e orientação tributária</li>
-              <li>Consultores on-line para te atenderem onde vc estiver</li>
-              <li>Seus documentos através de nosso canal disponibilizados 24 horas</li>
-              <li>Orientação nos contratos de locação e outros particulares!</li>
-              <li>Legalização de sua empresa em todos órgãos municipais, estaduais e federais!</li>
-              <li>Acompanhamento na obtenção das licenças</li>
-              <li>Orientação para empresas de e-commerce e digitais</li>
-              <li>Atendimento personalizado</li>
-              <li>Profissionais habilitados para orientarem em todos os passos</li>
-              <li>Acompanhamento na escolha do ponto comercial</li>
-              <li>Indicação de profissionais de mkt para valorizar sua marca e idéias</li>
+              <li><i class="fas fa-cash-register"></i> Abertura de empresas</li>
+              <li><i class="fas fa-file-signature"></i> Alterações contratuais</li>
+              <li><i class="fas fa-power-off"></i> Cancelamento de Empresas</li>
+              <li><i class="fas fa-dolly-flatbed"></i> Consultoria tributária</li>
+              <li><i class="fas fa-digital-tachograph"></i> Folha de pagamento</li>
+              <li><i class="fas fa-marker"></i> Escrituração Fiscal e Contábil</li>
+              <li><i class="fas fa-chart-bar"></i> Assessoria Empresarial</li>
+              <li><i class="fas fa-balance-scale"></i> Orientação trabalhista</li>
+              <li><i class="fas fa-chalkboard-teacher"></i> Orientação Previdenciária</li>
+              <li><i class="fas fa-file-invoice-dollar"></i> Orientação no Simples Nacional</li>
+              <li><i class="fas fa-award"></i> Certidões negativas</li>
+              <li><i class="fas fa-calculator"></i> Estudo e orientação tributária</li>
+              <li><i class="fas fa-file-contract"></i> Orientação nos contratos de locação e outros particulares</li>
+              <li><i class="fas fa-stamp"></i> Legalização de sua empresa em todos órgãos municipais, estaduais e federais!</li>
+              <li><i class="far fa-copyright"></i> Acompanhamento na obtenção das licenças</li>
+              <li><i class="fas fa-building"></i> Acompanhamento na escolha do ponto comercial</li>
+              <li><i class="fas fa-shopping-cart"></i> Orientação para empresas de e-commerce e digitais</li>
+              <li><i class="far fa-handshake"></i> Atendimento personalizado</li>
+              <li><i class="fab fa-mixcloud"></i> Seus documentos através de nosso canal disponibilizados 24 horas</li>
+              <li><i class="fas fa-headset"></i> Consultores on-line para te atenderem onde você estiver</li>
+              <!-- <li>Profissionais habilitados para orientarem em todos os passos</li> -->
+              <li><img class="img-responsive" src="../dist/img/ola.png"> Indicação da <strong><a href="https://olaconecta.github.io">Olá!</a></strong> para valorizar sua marca e idéias</li>
             </ul>
           </div>
       </div>
